steepshot_io/static/css/main.css
/* ... */
#modal_form #modal_close {
	width: 21px;
	height: 21px;
	position: absolute;
	top: 10px;
	right: 10px;
	cursor: pointer;
	display: block;
}

#overlay {
	z-index:16;
	position:fixed;
	background-color:#000;
	opacity:0.8; /
	-moz-opacity:0.8;
	filter:alpha(opacity=80);
	width:100%;
	height:100%;
	top:0;
	left:0;
	cursor:pointer;
	display:none;
}

.textbox1 {
    opacity: 1;
    transition: 0.45s;
    position: fixed;
}

#buttons {
    border:solid #f0f1f5 1px;
    border-radius: 10px;
    height: 180px;
    text-align: left;
    font-size:0.8em;
    z-index: 13;
    background: rgba(248, 248, 253, 0.5);
    transition: 0.45s;
    opacity: 1;
    display: inline-block;
    position: fixed;
    top: 440px;
}

#buttons p {
    font-size: 13px;
    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: 600 !important;
    margin: 10px 15px 25px;
    color:#374657;
}

#buttons a + p {
    margin: 25px 15px 20px;
}

#buttons a {
    text-align: center;
    text-decoration: none;
    margin: 15px;
    font-size: 13px;
    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: 600 !important;
}

.btpg2 {
    margin-left: 48% !important;
    top: 490px !important;
}

#mimg img, #mimg2 img, #mimg3 img {
    height:600px;
    position: fixed;
    -webkit-animation-duration: 6s; /* Safari 4.0 - 8.0 */
    -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
    animation-duration: 6s;
    animation-iteration-count: infinite;
    transition: 0.5s;
    opacity: 0;
    z-index: 1;
}

.hd #mimg img {   
    transition-property: right, opacity;
    transition-duration: 0.4s, 0.1s;
    transition-delay: 0s, 0.35s; 
}

#mimga img {
    right:-2250px ;
    bottom: -150px;
    height:600px;
    position: fixed;
    transition-property: right, opacity;
    transition-duration: 0.35s, 0.1s;
    transition-delay: 0s, 0.35s;
    z-index: 1;
    opacity: 1;
}

#mimg img {
    right:-2250px;
    bottom: -150px;
    transition-delay: 0.3s;
    transition-duration: 0.05s !important;
}

#error{
    display: none;
    color: red;
}

#mimg2 img {
    right:-2000px;
    bottom: -480px;
}

#mimg3 img {
    right:-2920px;
    bottom:60px;
}
.mimga img {
    bottom: -150px;
    right: -345px !important;
    opacity: 0!important;
}

.mimg img{
    bottom: -150px;
    -webkit-animation-name: amimg;
    animation-name: amimg;
    opacity: 1 !important;
}

@-webkit-keyframes amimg {
    0%   { right:-350px;}

    50%  { right:-300px;}

    100% { right:-350px;}
}

@keyframes amimg {
    0%   { right:-350px;}

    50%  { right:-300px;}

    100% { right:-350px;}
}

.mimg2 img {
    bottom: -480px;
    right: -30px !important;
    -webkit-animation-name: amimg2; /* Safari 4.0 - 8.0 */
    animation-name: amimg2;
    opacity: 1 !important;
}

@-webkit-keyframes amimg2 {
    0%   {  bottom:-500px;}

    50%  {  bottom:-460px;}

    100% {  bottom:-500px;}
}

@keyframes amimg2 {
    0%   {  bottom:-500px;}

    50%  {  bottom:-460px;}

    100% {  bottom:-500px;}
}

.mimg3 img{
    bottom: 0;
    right: -920px !important;
    -webkit-animation-name: amimg3;
    animation-name: amimg3;
    opacity: 1 !important;
}

@-webkit-keyframes amimg3 {
    0%   {  bottom: -20px;}

    50%  {  bottom: 20px;}

    100% {  bottom: -20px;}
}

@keyframes amimg3 {
    0%   {  bottom: -20px;}

    50%  {  bottom: 20px;}

    100% {  bottom:-20px;}
}

#simga img {
    display: none;
    opacity: 0;
    left: 7%;
    height:600px;
    position: fixed;
    top: 100px;
    z-index: 1;
    transition: 0.45s;
    transition-property: left, opacity;
    transition-duration: 0.4s, 0.1s;
    transition-delay: 0s, 0.35s;
}

#simg img{
    top: 100px;
    left: 5%;
    -webkit-animation-name: asimg;
    animation-name: asimg;
    height:600px;
    position: fixed;
    -webkit-animation-duration: 6s;
    -webkit-animation-iteration-count: infinite;
    animation-duration: 6s;
    animation-iteration-count: infinite;
    opacity: 1;
    transition: 0.45s;
}

@-webkit-keyframes asimg {
    0%   { left: 5%;}

    50%  { left: 10%;}

    100% { left: 5%;}
}

@keyframes asimg {
    0%   { left: 5%;}

    50%  { left: 10%;}

    100% { left: 5%;}
}

.android {
    background: #eb443d;
    border-radius: 8px;
    color: white;
    box-shadow: 0 5px 15px rgba(235, 68, 61, 0.5);
    padding: 15px 70px;
}

.alpha_steepshot{
    background: #7ed321;
    border-radius: 8px;
    color: white;
    box-shadow: 0 5px 15px rgba(235, 68, 61, 0.5);
    padding: 15px 181px;
}

.apple {
    background: #489fff;
    border-radius: 8px;
    color: white;
    box-shadow: 0 5px 15px rgba(72, 159, 255, 0.5);
    padding: 15px 75px;
}

.backtext {
    background-image: url("Text BG@3x.png");
    margin: 6% 0 -6.5em 0;
    transition: 0.45s;
    background-repeat: no-repeat;
    padding: 110px;
    background-size: 1000px;
    position: relative;
    z-index: 1;
}

.frontext {
    width: 60%;
    transition: 0.45s;
}

.hd .textbox1 {
    opacity: 0 !important;
}

.hd {
    margin-bottom: 0 !important;
}

.hd .textp2 {
    opacity:0 !important;
    margin-left: 150%;
}

#panel2.hd{
    height: 100%;

}

.hd #simga img {
    left:-100% !important;
    transition-property: left, opacity;
    transition-duration: 0.45s, 0.1s;
    transition-delay: 0s, 0.35s;
    z-index: 1;
    opacity: 1 !important;
}

#panel3.hd h2 {    
    margin: -30px 0 -70px;  
    text-align: center;
}

.hd #simg img {
    opacity: 0;
}

#panel3.hd {
    opacity: 0 !important;  
}

#buttons.hd{
    opacity: 0;
}


h1 {
    margin:0;
    font-size: 40px;
    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: 300 !important;
    color: #374657;
    position: relative;
    z-index: 13;
}

h2 {
    margin:0;
    font-size: 24px;
    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: 300 !important;
    color: #374657;
}

#panel2 {
    width: 50%;
    margin-left: 51%;
    top: 160px;
    height: 100%;
}
/* ... */

